<resources>

    <string name="app_name">FETL QR code</string>
    <string name="login">ลงชื่อใช้งาน</string>
    <string name="user">User :</string>
    <string name="password">Password :</string>
    <string name="new_register">New Register</string>
    <string name="name">Name</string>


    <string name="title_HaveSpace">มีช่องว่าง</string>
    <string name="message_HaveSpace">กรุณากรอกทุกช่อง</string>
    <string name="title_UserFalse">User False</string>
    <string name="message_UserFalse">No this user in my database</string>
    <string name="title_passwordFalse">Password False</string>
    <string name="message_passwordFalse">Please try again password false</string>

</resources>
