<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fetl.praniday.fetl_can.RegisterActivity">


    <RelativeLayout
        android:id="@+id/relTop"
        android:padding="@dimen/padding"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/btnBack"
            android:src="@mipmap/ic_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:textStyle="bold"
            android:layout_centerInParent="true"
            android:textSize="@dimen/h1"
            android:textColor="@color/white"
            android:text="@string/new_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>
    <Button
        android:id="@+id/btnNewRegis"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"
        android:text="@string/new_register"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_above="@+id/btnNewRegis"
        android:layout_below="@+id/relTop"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:padding="@dimen/padding"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:src="@mipmap/ic_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <EditText
                    android:inputType="text"
                    android:id="@+id/edtName"
                    android:textColorHint="@color/colorPrimary"
                    android:hint="@string/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:src="@mipmap/ic_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <EditText
                    android:inputType="text"
                    android:id="@+id/edtUser"
                    android:textColorHint="@color/colorPrimary"
                    android:hint="@string/user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:src="@mipmap/ic_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/edtPassword"
                    android:textColorHint="@color/colorPrimary"
                    android:hint="@string/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>


        </LinearLayout>


    </ScrollView>




</RelativeLayout>



